- Updated the Lato font to the latest version (2.015),
- Included licenses of the third-party dependencies in the NuGet package,
- Included a list of Contributors in the NuGet package to acknowledge the valuable input from our Community in improving QuestPDF.


Unfortunately, this release also introduces breaking changes:
- Removed support for injecting SkiaSharp content directly into the document. It is still possible to integrate SkiaSharp through vector and raster graphics; please consult the documentation for more details,
- Removed support for platforms: Android, iOS, UWP, WASM, and Linux-Alpine. We are currently investigating reintroducing support for WASM and Linux-Alpine in future releases.

We would like to thank the SkiaSharp project, its maintainers, and contributors, for creating a fantastic graphics library. It was a fantastic foundation for QuestPDF for over 3 years.


Version 2024.3.1
- Enhanced discoverability of text alignment options (AlignLeft, AlignCenter, AlignRight, AlignStart, AlignEnd and Justify) when using the shorthand Text method (common use case).
- To enhance compatibility with existing codebases, we've removed the breaking change associated with the deprecation of the TextStyle.Fallback method. Although this method remains obsolete, we've reintroduced it with a compatibility layer to prevent disruptions.
- Enhanced compatibility with dotnet standard projects.
- Fix: on the Windows platform, the "Could not find an appropriate font fallback for the following glyphs: $U-000D" exception is thrown when the "QuestPDF.Settings.CheckIfAllTextGlyphsAreAvailable" is set true, and the "TextDescriptor.Line" method is used (that inserts the '\r' character).
- Fix: resolved an issue where the positioning of hyperlinks was incorrect when text contained injected block items.

Version 2024.3.2
- Improved compatibility with texts that contain the carriage return character '\r'.