@@ -4,9 +4,33 @@ using QuestPDF.Skia.Text;
 
 namespace QuestPDF.Skia;
 
+[StructLayout(LayoutKind.Sequential)]
+internal struct SkSvgImageSize
+{
+    public float Width;
+    public float Height;
+    
+    public Unit WidthUnit;
+    public Unit HeightUnit;
+    
+    public enum Unit
+    {
+        Unknown,
+        Number,
+        Percentage,
+        Pixels,
+        Centimeters,
+        Millimeters,
+        Inches,
+        Points,
+        Picas, // 1 Pica = 12 points
+    }
+}
+
 internal sealed class SkSvgImage : IDisposable
 {
     public IntPtr Instance { get; private set; }
+    public SkSvgImageSize Size;
     public SkRect ViewBox;
     
     public SkSvgImage(string svgString, SkFontManager fontManager)
@@ -18,7 +42,19 @@ internal sealed class SkSvgImage : IDisposable
         if (Instance == IntPtr.Zero)
             throw new Exception("Cannot decode the provided SVG image.");
         
-        API.svg_get_viewbox(Instance, out ViewBox);
+        API.svg_get_size(Instance, out Size, out ViewBox);
+    }
+
+    internal float AspectRatio
+    {
+        get
+        {
+            if (Size.WidthUnit is SkSvgImageSize.Unit.Percentage || Size.HeightUnit is SkSvgImageSize.Unit.Percentage)
+                return ViewBox.Width / ViewBox.Height;
+        
+            else
+                return Size.Width / Size.Height;
+        }
     }
     
     ~SkSvgImage()
@@ -44,6 +80,6 @@ internal sealed class SkSvgImage : IDisposable
         public static extern void svg_unref(IntPtr svg);
         
         [DllImport(SkiaAPI.LibraryName)]
-        public static extern void svg_get_viewbox(IntPtr svg, out SkRect viewbox);
+        public static extern void svg_get_size(IntPtr svg, out SkSvgImageSize size, out SkRect viewBox);
     }
 }
